--- a/IdeaProjects/com.60.TestNG/configuration.properties
+++ b/IdeaProjects/com.60.TestNG/configuration.properties
@@ -8,3 +8,13 @@ facebookUrl=https://www.facebook.com
 
 fbWrongUsername=wdsardfhyrdxv
 fbWrongpassword=1234567890
+
+brcUrl=https://www.bluerentalcars.com/
+brcemail=customer@bluerentalcars.com
+brcpassword=12345
+
+hcmpUrl=https://www.hotelmycamp.com
+hcmpUsername=manager
+hcmpPassword=Manager1!
+hcmpDescription=belirli bir ücret kar??l???nda yolcu ve turistlere konaklama ve yemek hizmeti veren tesis.
+hmcpPrice=500$
